Fix blurring of zoomed images by making all elements which overlay the image (last one remaining being the zoom slider) promoted to their own layer

--- a/unpacked-extension/css/style.css
+++ b/unpacked-extension/css/style.css
@@ -381,6 +381,7 @@ body, body *, .chrome-image-quilts, .chrome-image-quilts *, .chrome-image-quilts
     -webkit-transition: opacity .5s;
     overflow: hidden;
     text-transform: uppercase;
+    -webkit-transform: translateZ(0);
 }
 
 .chrome-image-quilts .image .zoom input {
